fixed spelling of bastion

--- a/final.tex
+++ b/final.tex
@@ -38,7 +38,7 @@ CentOS 5.3 was released 31 March 2009, making Isengard one of the servers with t
 \end{paragraph}
 \section{Design}
 \begin{paragraph}\indent
-After some deliberation we decided to keep the bashtion host as a VM so as to be able to have a redundant system in the future, we do not feel that this poses any additional security concerns nor did we find information to the contrary. 
+After some deliberation we decided to keep the bastion host as a VM so as to be able to have a redundant system in the future, we do not feel that this poses any additional security concerns nor did we find information to the contrary. 
 The operating system we chose was OpenBSD 5.4 we made this choice as OpenBSD has always had a reputation of valuing securty over everything else this is a quote from their website, ``Try to be the \#1 most secure operating system.'' 
 OpenBSD backports all of the patches and makes it easy to upgrade a system to the most current version.
 As part of our enhanced security we developed a simple password checking utility that looks for a specified level of entropy.
