--- a/final.tex
+++ b/final.tex
@@ -14,7 +14,7 @@
 \begin{paragraph}\indent
 COSI hosts many services in the server room, many of which that are not exposed to the whole internet.
 Machines that are not, instead require that connections come from a particular location.
-The current attempt at a solution is Isengard, a virtual machine that is intended to be a security harded machine that would act as a gateway to the rest of the world.
+The current attempt at a solution is Isengard, a security hardened virtual machine that would act as a gateway to the rest of the world.
 However, Isengard has become rather out of date and is likely full of unpatched security vulnerabilities as it is currently unmaintained.
 The documentation is also rather sparse, thus we are unsure of what exactly it provides.
 \end{paragraph}
